[package]
name = "inf_vec"
version = "0.1.0"
edition = "2021"
authors = ["Tim (Theemathas) Chirananthavat <theemathas@gmail.com>"]
description = "A lazily-populated infinite Vec-like data structure."
documentation = "https://docs.rs/inf_vec"
readme = "README.md"
repository = "https://github.com/theemathas/inf_vec/"
license = "MIT"
keywords = ["infinite", "data-structures", "iterator", "lazy", "sequence"]
categories = ["data-structures", "iterators", "caching"]

[dependencies]

[dev-dependencies]
once_cell = "~1.19.0"
